Fixed the z-index values for tags and header.

--- a/admin/themes/default/css/style.css
+++ b/admin/themes/default/css/style.css
@@ -421,7 +421,7 @@ header {
     overflow: auto;
     padding:  .625em 0;
     text-shadow: 1px 1px 1px #000000;
-    z-index: 1;
+    z-index: 999;
     }
     
 header a:link, header a:visited {
@@ -1258,7 +1258,7 @@ header nav {
     padding: 0 0px 0 10px;
     position: relative;
     text-shadow: -1px -1px 1px rgba(0,0,0,.5);
-    z-index: 500;    
+    z-index: 10;    
     }
 
 .hTagcloud li .close {
